Little padding corrections on mobile

--- a/main.css
+++ b/main.css
@@ -49,12 +49,12 @@ p {
 }
 
 section {
-	padding: 30px;
+	padding: 30px 20px;
 }
 
 @media (min-width: 768px) {
 	section {
-		padding: 30px 60px;
+		padding: 30px 40px;
 	}
 }
 
@@ -853,7 +853,7 @@ header {
 	align-items: center;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
 	.extra_container {
 		flex-direction: row;
 	}
@@ -1018,7 +1018,7 @@ textarea:focus, input:focus{
 
 
 footer {
-	padding: 10px 30px;
+	padding: 10px 20px;
 	background-color: var(--primary-color);
 	color: white;
 	display: flex;
